# pointcloud_stitching

./: CMakeLists.txt  package.xml
config/: parameters.yaml
include/pointcloud_stitching/: PointCloudStitching.hpp
launch/: two_velodyne.launch
src/: PointCloudStitching.cpp  pointcloud_stitching_node.cpp
