<?xml version="1.0"?>

<package>

  <name>pointcloud_stitching</name>
  <version>0.1.0</version>
  <description>Stitches two velodyne clouds toghether</description>

  <maintainer email="yuryevv@student.ethz.ch">Valentin Yuryev</maintainer>
  <author email="yuryevv@student.ethz.ch">Valentin Yuryev</author>
  <license>Open</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>param_io</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>param_io</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf2_ros</run_depend>
</package>
